runtime: grub: allow cmdline append in image_arg
Build the kernel cmdline from the default console=ttyS0 and append any
provided cmdline_append, then use that in image_arg. This lets boards add
extra kernel arguments.

Signed-off-by: Aishwarya TCV <aishwarya.tcv@arm.com>

--- a/config/runtime/boot/grub.jinja2
+++ b/config/runtime/boot/grub.jinja2
@@ -1,7 +1,11 @@
 - deploy:
     kernel:
       url: '{{ node.artifacts.kernel }}'
-      image_arg: -kernel {kernel} -serial stdio --append "console=ttyS0"
+{%- set cmdline = 'console=ttyS0' %}
+{%- if cmdline_append %}
+{%-   set cmdline = cmdline + ' ' + cmdline_append %}
+{%- endif %}
+      image_arg: -kernel {kernel} -serial stdio --append "{{ cmdline }}"
       type: {{ node.data.kernel_type }}
 {%- if boot_commands == 'nfs' %}
     nfsrootfs:
